# knock-cmake

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Pulumi.yaml  SIMPLIFIED_BUILD.md  WARP.md  build.py  build_container.py  build_improved.py  instructions.md  pumi  pyproject.toml  pytest.ini  readme.md
.github/workflows/: README.md  pulumi.yml
assets/: Princes_of_the_Yen-epub.acsm
config/knock/: CMakeLists.txt
config/libgourou/: CMakeLists.txt
config/uPDFParser/: CMakeLists.txt
docs/: ACSM_DEVICE_LIMITS.md  CACHE_COSTS.md  DEBUG_PRESIGNED_URL.md  DOCKER_HUB_CREDENTIALS.md  DOCKER_HUB_SETUP.md  ECR_PULL_THROUGH_CACHE.md  ESC_INTEGRATION.md  LAMBDA_FURL_UPDATE.md  PLATFORM_COMPAT.md  PULUMI_CICD_SETUP.md
infrastructure/: CONFIG.md  MULTI_STACK_GUIDE.md  PLATFORM_COMPAT.md  Pulumi.dev.yaml  Pulumi.main.yaml  Pulumi.yaml  README.md  __init__.py  __main__.py  base_stack.py  buildspec.yml  codebuild-runner-with-digest.sh  codebuild-runner.sh  config.py  deploy.sh  environment_stack.py  esc-environment.yaml  lambda-wait.sh  utils.py  vars.py
infrastructure/lambda/: Dockerfile  README.md  __init__.py  handler.py
infrastructure/shell/: buildspec.yml  codebuild-runner-with-digest.sh  lambda-wait.sh
infrastructure/shell/buildspec_steps/: build.sh  cache-base-image-complex.sh  cache-base-image.sh  get-image-digest.sh  post-build.sh  pre-build.sh  setup-pull-through-cache.sh
infrastructure/shell_scripts/: lambda-wait.sh  platform-compat.sh
knock/: CMakeLists.txt
knock/src/: knock.cpp
lib-config/libgourou/: CMakeLists.txt
lib-config/uPDFParser/: CMakeLists.txt
scripts/: calculate-cache-costs.sh  change-passphrase.sh  deploy.sh  import-pullthroughcache.sh  migrate-to-pulumi-cloud.sh  migrate-to-s3-backend.sh  platform-compat.sh  reset_device_credentials.sh  setup-git-hooks.sh  setup-github-secrets.sh  setup.py  sync-pulumi-gh-docker.sh
scripts/git-hooks/: README.md  post-checkout
tests/: INTERACTIVE_CLI.md  ITEST_SUMMARY.md  QUICK_START.md  README.md  TEST_GUIDE.md  __init__.py  advanced_tests.sh  conftest.py  interactive_test.py  itest  manual_test.py  manual_test.sh  run_tests.py  run_tests.sh  test_advanced.py  test_lambda.py  test_presigned_url.py
tests/results/: acsm_content_response.json  health_check_response.json  invalid_acsm_response.json  missing_params_response.json
tests/shell/: advanced_tests.sh  manual_test.sh  run_tests.sh  setup_env.sh
